@@ -451,6 +451,6 @@ extern "C" {
 
 #pragma pack(pop)
 
-#include <stdio_s.h>
+#include <sec_api/stdio_s.h>
 
 #endif
